after 4 day commit

--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,10 @@ a {
 .sort__label svg {
     margin-right: 8px;
 }
+
+.sort__label svg.rotated{
+    transform: rotate(180deg);
+}
 .sort__label b {
     margin-right: 8px;
 }
@@ -376,12 +380,14 @@ a {
 }
 body {
     background-color: #ffdf8c;
+    padding: 50px 0;
 }
 .wrapper {
     width: calc(100vw - 100px);
     height: 100%;
     background-color: #fff;
-    margin: 50px auto;
+    margin: 0 auto;
+
     border-radius: 10px;
     max-width: 1400px;
 }
