--- a/src/index.css
+++ b/src/index.css
@@ -299,6 +299,28 @@ a {
     font-weight: bold;
     color: #fe5f1e;
 }
+
+/*My pizzzzzzzzzzaClasss*/
+
+.pizza-block > .pizza-block__selector > ul > li.disabled__element{
+    opacity: .3;
+    pointer-events: none;
+    /* background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .4);
+    border-radius: 5px;
+    cursor: auto; */
+
+}
+
+
+
+
+
+
+
+
+
+
 .pizza-block {
     width: 280px;
     text-align: center;
@@ -692,3 +714,4 @@ body {
     font-weight: 600;
     font-size: 18px;
 }
+
